# IVA1.0

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: hrm.yaml  model_dense.yaml  model_moe.yaml  multimodal.yaml  quant_infer.yaml  train_ppo.yaml  train_sft.yaml
scripts/: eval_reasoning.py  profile_kernels.py  validate_end_to_end.py
src/: __init__.py
src/api/: __init__.py  generate.py  serve.py
src/core/: __init__.py  attention.py  ffn.py  heads.py  hrm_controller.py  moe.py  norms.py  rope_kv.py  transformer.py
src/data/: __init__.py  builders.py  collate.py  tokenize.py
src/kernels_t/: __init__.py  attention_triton.py  autotune.py  kv_ops_triton.py  rmsnorm_triton.py  swiglu_linear_triton.py  utils.py
src/quant/: __init__.py  export_import.py  fp8_runtime.py  int4_weightonly.py
src/train/: __init__.py  engine.py  grpo.py  hrm_rpo.py  ppo.py  rm.py  sft.py
src/utils/: __init__.py  checkpoints.py  config.py  distributed.py  evals.py  logging.py
